Resolves #3039 by allowing to create AppDefinitions that define persistent volumes, allow container type MESOS and enable defining residency information. Note: the added models are not yet handled anywhere, this is just the API adjustment part. Changes in particular:
- updated Protobuf to allow for persistent volumes and residency information
- moved serialization logic to dedicated serializers
- added json formats
- updated AppDefinition json schema
- added validation
- added unit test and integration tests

--- a/docs/docs/rest-api/public/api/v2/schema/AppDefinition.json
+++ b/docs/docs/rest-api/public/api/v2/schema/AppDefinition.json
@@ -156,8 +156,8 @@
         },
         "type": {
           "type": "string",
-          "description": "The only supported container type at the moment is DOCKER.",
-          "enum": ["DOCKER"]
+          "description": "Supported container types at the moment are DOCKER and MESOS.",
+          "enum": ["MESOS", "DOCKER"]
         },
         "volumes": {
           "items": {
@@ -172,6 +172,17 @@
                 "type": "string",
                 "description": "The path of the volume on the host",
                 "minLength": 1
+              },
+              "persistent": {
+                "additionalProperties": false,
+                "properties": {
+                  "size": {
+                    "type": "integer",
+                    "description": "The size of the persistent volume in MiB",
+                    "minimum": 0
+                  }
+                },
+                "type": "object"
               },
               "mode": {
                 "type": "string",
